Integrated DIC library

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "defuse/php-encryption": "2.0.*",
         "phpmailer/phpmailer": "~5.2",
         "symfony/filesystem": "^2.8.9",
-        "symfony/console": "^2.8"
+        "symfony/console": "^2.8",
+        "pimple/pimple": "~3.0",
+        "mauretto78/simple-dic": "^1.0"
     }
 }
