Branch ready for testing before marged to master.

--- a/inc/config.ini.sample
+++ b/inc/config.ini.sample
@@ -60,6 +60,7 @@ DQF_ENCRYPTION_KEY = encryption-key
 DQF_ENCRYPTION_IV = encryption-iv
 DQF_GENERIC_USERNAME = "matecatGeneric@taus.net"
 DQF_GENERIC_PASSWORD = "generic-user-password"
+DQF_GENERIC_MICROSOFT_EMAIL = "generic-microsoft@matecat.com"
 
 ; Segments partition rule, leave unset to write to `segments` table.
 ; Format of configuration string is: "{id_project}:{table_name};...".
